Mejoras en los colores de las tarjetas de cargos tanto en detalle como en home

--- a/app/src/main/res/layout/card_detalle_cargo.xml
+++ b/app/src/main/res/layout/card_detalle_cargo.xml
@@ -21,8 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="clip_horizontal"
-        android:background="@drawable/layout_border"
-        android:backgroundTint="#FF0000"
+        android:background="@drawable/layout_border_green"
         android:clipChildren="true"
         android:clipToPadding="true"
         android:foregroundGravity="clip_vertical">
