--- a/app/src/main/res/drawable/layout_border_green.xml
+++ b/app/src/main/res/drawable/layout_border_green.xml
@@ -8,7 +8,7 @@
     </item>
     <item>
         <shape>
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="#02BB2A"/>
             <stroke android:width="2dip" android:color="#645CAA" />
             <corners android:radius="20dp"/>
             <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
