--- a/app/src/main/res/layout/list_element_cargo.xml
+++ b/app/src/main/res/layout/list_element_cargo.xml
@@ -1,173 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv5"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
-    android:outlineAmbientShadowColor="#000000"
-    android:outlineProvider="paddedBounds"
-    android:outlineSpotShadowColor="#000000"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:cardUseCompatPadding="true">
+    android:layout_height="140dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv5"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
-        android:background="#645CA6">
+        android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:outlineAmbientShadowColor="#000000"
+        android:outlineProvider="paddedBounds"
+        android:outlineSpotShadowColor="#000000"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardElevation="10dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="2dp"
-            android:background="#FFFFFF"
+            android:background="@drawable/layout_border_green"
             android:orientation="horizontal"
-            android:padding="6dp"
-            android:paddingLeft="3dp"
-            android:paddingTop="3dp"
-            android:paddingEnd="3dp"
-            android:paddingRight="3dp"
-            android:paddingBottom="3dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#FFFFFF"
+                android:background="@drawable/layout_border"
                 android:orientation="horizontal">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="19dp"
-                    android:layout_height="match_parent"
-                    android:background="#FF0000">
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="273dp"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="2dp"
+                    android:orientation="vertical"
+                    android:padding="10dp"
+                    tools:ignore="NotSibling">
 
-                    <LinearLayout
-                        android:id="@+id/linearLayout1"
-                        android:layout_width="273dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginTop="2dp"
-                        android:orientation="vertical"
-                        tools:ignore="NotSibling">
+                    <TextView
+                        android:id="@+id/descripcionTextView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lekton"
+                        android:maxLines="1"
+                        android:text="Netflix"
+                        android:textColor="#645CAA"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                        <LinearLayout
-                            android:id="@+id/linearLayout2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginStart="4dp"
-                            android:layout_marginTop="2dp"
-                            android:orientation="vertical"
-                            tools:ignore="NotSibling">
-
-                            <TextView
-                                android:id="@+id/descripcionTextView2"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:fontFamily="@font/lekton"
-                                android:maxLines="1"
-                                android:text="Netflix"
-                                android:textColor="#645CAA"
-                                android:textSize="20sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/descripcionBreveTextView2"
-                                android:layout_width="238dp"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="end"
-                                android:fontFamily="@font/lekton"
-                                android:maxLines="2"
-                                android:text="Entretenimiento"
-                                android:textColor="#645CA9"
-                                android:textSize="15sp"
-                                android:textStyle="bold" />
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/valorActualTextView2"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginEnd="6dp"
-                                    android:layout_marginRight="6dp"
-                                    android:layout_marginBottom="-5dp"
-                                    android:fontFamily="@font/lekton"
-                                    android:gravity="center"
-                                    android:orientation="vertical"
-                                    android:text="Fch. Vto:"
-                                    android:textColor="#645CA8"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold" />
-
-                                <TextView
-                                    android:id="@+id/fechaTextView2"
-                                    android:layout_width="170dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginEnd="6dp"
-                                    android:layout_marginRight="6dp"
-                                    android:layout_marginBottom="-5dp"
-                                    android:fontFamily="@font/lekton"
-                                    android:gravity="center"
-                                    android:orientation="vertical"
-                                    android:text="23/10/2022"
-                                    android:textAlignment="viewStart"
-                                    android:textColor="#6E66AD"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
-
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/descripcionBreveTextView2"
+                        android:layout_width="238dp"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/lekton"
+                        android:maxLines="2"
+                        android:text="Entretenimiento"
+                        android:textColor="#645CA9"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/monedaActualTextView2"
-                            android:layout_width="match_parent"
+                            android:id="@+id/valorActualTextView2"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_marginEnd="6dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginBottom="-5dp"
                             android:fontFamily="@font/lekton"
                             android:gravity="center"
                             android:orientation="vertical"
-                            android:text="$1423"
-                            android:textAlignment="center"
-                            android:textColor="#645CA9"
+                            android:text="Fch. Vto:"
+                            android:textColor="#645CA8"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/fechaTextView2"
+                            android:layout_width="170dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginEnd="6dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginBottom="-5dp"
+                            android:fontFamily="@font/lekton"
+                            android:orientation="vertical"
+                            android:text="23/10/2022"
+                            android:textAlignment="viewStart"
+                            android:textColor="#6E66AD"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/monedaActualTextView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/lekton"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:text="$1423"
+                        android:textAlignment="center"
+                        android:textColor="#645CA9"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
             </LinearLayout>
-
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
