--- a/app/src/main/res/layout/activity_onboarding_first.xml
+++ b/app/src/main/res/layout/activity_onboarding_first.xml
@@ -20,62 +20,64 @@
         android:textSize="47dp"
         android:textStyle="bold"
         app:circularflow_radiusInDP="90"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintBottom_toTopOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView1" />
+        app:layout_constraintTop_toBottomOf="@+id/view3" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView1"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginStart="-90dp"
-        android:layout_marginTop="-90dp"
-        app:cardBackgroundColor="#645CAA"
-        app:cardCornerRadius="90dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <View
+        android:id="@+id/view4"
         android:layout_width="match_parent"
         android:layout_height="265dp"
-        android:layout_marginBottom="-90dp"
-        android:layout_marginRight="-90dp"
-        app:cardBackgroundColor="#645CAA"
-        app:cardCornerRadius="90dp"
+        android:background="@drawable/layout_left_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <Button
+        android:id="@+id/start_onboarding_button"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:width="200dp"
+        android:height="55dp"
+        android:backgroundTint="#FFFFFF"
+        android:fontFamily="@font/lekton"
+        android:shadowDy="4"
+        android:shadowRadius="4"
+        android:text="Comenzar"
+        android:textColor="#645CA9"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:cornerRadius="50dp"
+        app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="@+id/view4"
+        app:layout_constraintStart_toStartOf="@+id/view4"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-            <Button
-                android:id="@+id/start_onboarding_button"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="90dp"
-                android:layout_marginBottom="150dp"
-                android:width="200dp"
-                android:height="55dp"
-                android:backgroundTint="#FFFFFF"
-                android:fontFamily="@font/lekton"
-                android:shadowDy="4"
-                android:shadowRadius="4"
-                android:text="Comenzar"
-                android:textColor="#645CA9"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                app:cornerRadius="50dp"
-                app:iconTint="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView2" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/view3"
+        android:layout_width="wrap_content"
+        android:layout_height="82dp"
+        android:background="@drawable/layout_bottom_right_rounded"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/lekton"
+        android:text="2022 It'sMyCash. \n Todos los derechos reservados-"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_onboarding_button"
+        app:layout_constraintVertical_bias="0.82" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
