--- a/app/src/main/res/layout/activity_onboarding_first.xml
+++ b/app/src/main/res/layout/activity_onboarding_first.xml
@@ -11,6 +11,7 @@
         android:layout_width="320dp"
         android:layout_height="0dp"
         android:layout_marginStart="45dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="45dp"
         android:fontFamily="@font/lekton"
         android:gravity="center"
@@ -20,7 +21,6 @@
         android:textSize="47dp"
         android:textStyle="bold"
         app:circularflow_radiusInDP="90"
-        app:layout_constraintBottom_toTopOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
@@ -53,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="@+id/view4"
         app:layout_constraintStart_toStartOf="@+id/view4"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toTopOf="@+id/view4" />
 
     <View
         android:id="@+id/view3"
@@ -79,5 +79,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_onboarding_button"
         app:layout_constraintVertical_bias="0.82" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintBottom_toTopOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:srcCompat="@drawable/app_icon_rounded" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
