Creacion de Adapter para recyclerView de Home

--- a/app/src/main/res/layout/list_categoria_monto_maximo.xml
+++ b/app/src/main/res/layout/list_categoria_monto_maximo.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv5"
+    android:id="@+id/cv_element_list"
     android:layout_width="match_parent"
     android:layout_height="90dp"
     android:animateLayoutChanges="true"
@@ -32,7 +32,6 @@
                 android:fontFamily="@font/lekton"
                 android:gravity="center"
                 android:text="Entretenimiento"
-                android:textAlignment="viewStart"
                 android:textColor="#645CAA"
                 android:textSize="15dp"
                 android:textStyle="bold"
