Ajustes en el procesamiento de la fecha de un cargo, semaforo funcionando. Mejoras en tamaños de componentes

--- a/app/src/main/res/layout/list_element_cargo.xml
+++ b/app/src/main/res/layout/list_element_cargo.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp">
+    android:layout_height="100dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_element_list"
@@ -47,9 +47,11 @@
                     android:layout_width="273dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="0dp"
                     android:orientation="vertical"
-                    android:padding="10dp"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     tools:ignore="NotSibling">
 
                     <TextView
@@ -61,7 +63,7 @@
                         android:maxLines="1"
                         android:text="Netflix"
                         android:textColor="#645CAA"
-                        android:textSize="20sp"
+                        android:textSize="15sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -73,7 +75,7 @@
                         android:maxLines="2"
                         android:text="Entretenimiento"
                         android:textColor="#645CA9"
-                        android:textSize="15sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
                     <LinearLayout
@@ -93,7 +95,7 @@
                             android:orientation="vertical"
                             android:text="Fch. Vto:"
                             android:textColor="#645CA8"
-                            android:textSize="20sp"
+                            android:textSize="13sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -104,11 +106,11 @@
                             android:layout_marginRight="6dp"
                             android:layout_marginBottom="-5dp"
                             android:fontFamily="@font/lekton"
+                            android:gravity="center"
                             android:orientation="vertical"
                             android:text="23/10/2022"
-                            android:textAlignment="viewStart"
                             android:textColor="#6E66AD"
-                            android:textSize="20sp"
+                            android:textSize="13sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -122,11 +124,13 @@
 
                     <TextView
                         android:id="@+id/precio_list_element_cargo"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_gravity="end"
                         android:fontFamily="@font/lekton"
                         android:gravity="center"
                         android:orientation="vertical"
+                        android:padding="10dp"
                         android:text="$1423"
                         android:textAlignment="center"
                         android:textColor="#645CA9"
