--- a/app/src/main/res/drawable/layout_left_rounded.xml
+++ b/app/src/main/res/drawable/layout_left_rounded.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@null" />
+            <solid android:color="#00000000" />
         </shape>
     </item>
     <item>
