--- a/app/src/main/res/layout/list_element_cargo.xml
+++ b/app/src/main/res/layout/list_element_cargo.xml
@@ -124,7 +124,7 @@
 
                     <TextView
                         android:id="@+id/precio_list_element_cargo"
-                        android:layout_width="wrap_content"
+                        android:layout_width="102dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="end"
                         android:fontFamily="@font/lekton"
