Se pasan datos entre home y detalle de cargo

--- a/app/src/main/res/layout/activity_detalle_cargo.xml
+++ b/app/src/main/res/layout/activity_detalle_cargo.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view5"
         android:layout_width="wrap_content"
-        android:layout_height="265dp"
+        android:layout_height="150dp"
         android:background="@drawable/layout_left_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +37,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/detalle_Background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="clip_horizontal"
