Se agregan hints a los textfields de pantalla nuevoCargo

--- a/app/src/main/res/layout/activity_nuevo_gasto.xml
+++ b/app/src/main/res/layout/activity_nuevo_gasto.xml
@@ -25,8 +25,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Categoria*"
         android:inputType="textPersonName"
-        android:text="Categoria*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -41,8 +41,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Nombre*"
         android:inputType="textPersonName"
-        android:text="Nombre*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -57,8 +57,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Tipo de cargo*"
         android:inputType="textPersonName"
-        android:text="Tipo de cargo*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -73,8 +73,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Detalle*"
         android:inputType="textPersonName"
-        android:text="Detalle*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -89,8 +89,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Link de cancelacion*"
         android:inputType="textPersonName"
-        android:text="Link de cancelacion*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -105,8 +105,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Monto*"
         android:inputType="textPersonName"
-        android:text="Monto*"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -154,8 +154,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:fontFamily="@font/lekton"
+        android:hint="Fecha Proximo Pago"
         android:inputType="date"
-        android:text="Fecha Proximo Pago"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
