--- a/app/src/main/res/drawable/seekbar_style.xml
+++ b/app/src/main/res/drawable/seekbar_style.xml
@@ -2,12 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@android:id/background"
-        android:drawable="@drawable/border_shadow" >
+        android:drawable="@drawable/border_shadow"
+        android:height="5dp"
+        android:gravity="center">
     </item>
 
     <item
-        android:id="@android:id/progress" >
-        <clip
-            android:drawable="@color/white" />
+        android:id="@android:id/progress"
+        android:drawable="@drawable/border_shadow"
+        android:height="5dp"
+        android:gravity="center">
     </item>
 </layer-list>
