--- a/app/src/main/res/layout/service_popup.xml
+++ b/app/src/main/res/layout/service_popup.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/layout_full_rounded"
+    android:layout_margin="20dp"
+    android:background="@drawable/layout_full_rounded_less_radius"
     android:padding="10dp">
 
 
