--- a/app/src/main/res/layout/activity_onboarding_second.xml
+++ b/app/src/main/res/layout/activity_onboarding_second.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/start_onboarding_button3"
+        android:id="@+id/IrALaWeb_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:width="200dp"
