--- a/app/src/main/res/layout/activity_onboarding_second.xml
+++ b/app/src/main/res/layout/activity_onboarding_second.xml
@@ -7,7 +7,7 @@
     tools:context=".OnboardingSecond">
 
     <TextView
-        android:id="@+id/onbaording_second_text"
+        android:id="@+id/textView1"
         android:layout_width="320dp"
         android:layout_height="0dp"
         android:layout_marginBottom="4dp"
